# topdesk-synthetic-data

./: .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/topdesk_synthetic_data/: __main__.py  synthetic.py
src/topdesk_synthetic_data/topdesk/: __init__.py  asset.py  incident.py  person.py
